# Videoextractor

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  release.yml
src/app/: __init__.py  __main__.py  web.py
src/app/services/: summarization.py  transcription.py  video_processor.py
tests/: test_api.py
